--- a/The-Pet-Shop-Website/contact.html
+++ b/The-Pet-Shop-Website/contact.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="description" content="The contact us page">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 
 <body>
     <!--NAVBAR-->
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="contact.html">CONTACT</a></li>
@@ -18,20 +19,20 @@
      <!--HEADER-->
      <header>
         <div>
-            <h1>Contact Us!</h1>
+            <h1 class="animate-text">Contact Us!</h1>
         </div>
     </header>
     <!--FORM-->
     <section>
         <div>
-            <h3>Pleasee provideo your contact information and a brief message of your inquiry.
+            <h3 id="contact-h3">Pleasee provideo your contact information and a brief message of your inquiry.
 
             </h3>
             <div>
                 <form>
                     <input type="text" placeholder="First Name">
                     <input type="texct" placeholder="Last Name"><br>
-                    <input type="email" placeholder="Email"><br>
+                    <input type="email" placeholder="Email">
                     <input type="tel" placeholder="Phone Number"><br>
                     <input type="checkbox" id="Newslettter">
                     <lable for="Newslewtter">Would you like to recieve our monthly newsletter?</lable><br>
