--- a/The-Pet-Shop-Website/index.html
+++ b/The-Pet-Shop-Website/index.html
@@ -1,73 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="The pet shop home page">
     <title>The Pet Shop</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
 </head>
+
 <body>
     <!--NAVBAR-->
-    <nav>
-        <ul>
+    <nav class="nav-bar">
+        <ul id="nav-border">
             <li><a href="index.html">HOME</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
         <ul>
-            <a href="#cat"><li>Cats & Kittens</li></a>
-            <a href="#dog"><li>Dogs & Puppies</li></a>
-            <a href="#rabbit"><li>Rabbits</li></a>
-            <a href="#guineapig"><li>Guinea Pigs</li></a>
-            <a href="#fish"><li>Fish</li></a>
-            <a href="#reptile"><li>Reptiles</li></a>
-            <a href="#video"><li>Videos</li></a>
+            <a href="#cat">
+                <li>Cats & Kittens</li>
+            </a>
+            <a href="#dog">
+                <li>Dogs & Puppies</li>
+            </a>
+            <a href="#rabbit">
+                <li>Rabbits</li>
+            </a>
+            <a href="#guineapig">
+                <li>Guinea Pigs</li>
+            </a>
+            <a href="#fish">
+                <li>Fish</li>
+            </a>
+            <a href="#reptile">
+                <li>Reptiles</li>
+            </a>
+            <a href="#video">
+                <li>Videos</li>
+            </a>
         </ul>
     </nav>
     <!--HEADER-->
     <header>
         <div>
-            <h1>Welcome to the Pet Shop!</h1>
+            <h1 class="animate-text">Welcome to the Pet Shop!</h1>
         </div>
     </header>
 
     <blockquote>
         "Until one has loved an animal, a part of one's soul remains unawakened."
-    — Anatole France
+        — Anatole France
     </blockquote>
-    
+
     <!--PET IMAGES-->
     <section>
-        <div>
+        <div class="container">
             <h2>Choose a Pet!</h2>
             <div>
                 <!--CAT IMAGE-->
-                <div id="cat">
-                    <h3>Cats & Kittens</h3>
-                    <img src="images/kittens.jpeg" alt="Picture of Kittens">
+                <div id="cat" class="column">
+                    <div class="image-container">
+                        <h3>Cats & Kittens</h3>
+                        <img src="images/kittens.jpeg" alt="Picture of kittens">
+                        <div class="overlay"></div>
+                    </div>
                 </div>
                 <!--DOG IMAGE-->
-                <div id="dog">
-                    <h3>Dogs & Puppies</h3>
-                    <img src="images/puppies.jpg" alt="Picture of dogs">
+                <div id="dog" class="column">
+                    <div class="image-container">
+                        <h3>Dogs & Puppies</h3>
+                        <img src="images/puppies.jpg" alt="Picture of dogs">
+                        <div class="overlay"></div>
+                    </div>
                 </div>
                 <!--RABBIT IMAGE-->
-                <div id="rabbit">
-                    <h3>Rabbits</h3>
-                    <img src="images/rabbits.jpg" alt="Picture of rabbits">
+                <div id="rabbit" class="column">
+                    <div class="image-container">
+                        <h3>Rabbits</h3>
+                        <img src="images/rabbits.jpg" alt="Picture of rabbits">
+                        <div class="overlay"></div>
+                    </div>
                 </div>
-                 <!--GUINEA PIG IMAGE-->
-                 <div id="guineapig">
-                    <h3>Guinea Piugs</h3>
-                    <img src="images/guinea-pigs.jpg" alt="Picture of guinea pigs">
+                <!--GUINEA PIG IMAGE-->
+                <div id="guineapig" class="column">
+                    <div class="image-container">
+                        <h3>Guinea Piugs</h3>
+                        <img src="images/guinea-pigs.jpg" alt="Picture of guinea pigs">
+                        <div class="overlay"></div>
+                    </div>
                 </div>
-                 <!--Fish IMAGE-->
-                 <div id="fish">
-                    <h3>Fish</h3>
-                    <img src="images/goldfish.webp" alt="Picture of goldfish">
+                <!--Fish IMAGE-->
+                <div id="fish" class="column">
+                    <div class="image-container">
+                        <h3>Fish</h3>
+                        <img src="images/goldfish.webp" alt="Picture of goldfish">
+                        <div class="overlay"></div>
+                    </div>
                 </div>
-                 <!--REPTILE IMAGE-->
-                 <div id="reptile">
-                    <h3>Reptiles</h3>
-                    <img src="images/bearded-dragon.webp" alt="Picture of bearded dragon">
+                <!--REPTILE IMAGE-->
+                <div id="reptile" class="column">
+                    <div class="image-container">
+                        <h3>Reptiles</h3>
+                        <img src="images/bearded-dragon.webp" alt="Picture of bearded dragon">
+                        <div class="overlay"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -75,7 +114,7 @@
     <!--VIDEOS-->
     <section>
         <!--DOG VIDEO-->
-        <div id="video">
+        <div id="video" class="container">
             <h3>Videos</h3>
             <iframe width="1289" height="720" src="https://www.youtube.com/embed/ng58pNPDDW4"></iframe>
         </div>
@@ -98,4 +137,5 @@
         </table>
     </footer>
 </body>
+
 </html>
