One Page Web Site CSS
added CSS to my one page website

--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poker Coaching</title>
+    <link rel="stylesheet" href="css/one_page_website.css">
 </head>
 <!--HEADER-->
 <header>
@@ -45,7 +46,7 @@
                 src="https://www.youtube.com/embed/kP9CBtSW0kA" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>>
+                allowfullscreen alt="Training videos">
 
                 </iframe>
             </div>
